# MicroNeat

./: .gitignore  README.md  gyn_fitness.py  lunar_lander.py  main_game.py  makefile  processing_progress.py  pyproject.toml  terminal.py  trash.py
examples/: lunar_lander.py  xor.py
src/: config.py  genes.py  genome.py  id_handler.py  main_game.py  nn.py  population.py  species.py  terminal.py  utils.py  visualization.py
src/misc/: serialization.py
src/misc/callbacks/: callback.py  early_stop.py  history_callback.py
src/schedulers/: pool_scheduler.py
